--- a/packages/lab/src/progress/LinearProgress/LinearProgress.css
+++ b/packages/lab/src/progress/LinearProgress/LinearProgress.css
@@ -10,19 +10,10 @@
   background: var(--salt-accent-background-disabled);
 }
 
-.saltLinearProgress-disabled .saltLinearProgress-barContainer :after {
-  background: var(--salt-accent-background-disabled);
-}
-
 .saltLinearProgress-disabled .saltLinearProgress-progressValue {
   color: var(--salt-text-primary-foreground-disabled);
   cursor: var(--salt-selectable-cursor-disabled);
 }
-
-.saltLinearProgress-disabled .saltLinearProgress-barContainer:after {
-  background: var(--salt-track-borderColor-disabled);
-}
-
 
 .saltLinearProgress-barContainer {
   background: none;
@@ -30,18 +21,6 @@
   width: calc(100% - 10px);
   overflow: hidden;
   height: var(--salt-size-adornment);
-}
-
-/* Horizontal line under the progress indicator bar */
-.saltLinearProgress-barContainer:after {
-  top: calc((var(--salt-size-adornment) - var(--salt-track-borderWidth)) / 2);
-  background: var(--salt-track-borderColor);
-  content: "";
-  display: block;
-  height: var(--salt-track-borderWidth);
-  left: 0;
-  position: absolute;
-  right: 0;
 }
 
 .saltLinearProgress-bar {
@@ -54,6 +33,16 @@
   transform-origin: left;
   background: var(--salt-accent-background);
   z-index: 2;
+}
+
+.saltLinearProgress-track {
+  background: var(--salt-track-borderColor);
+  width: 100%;
+  height: var(--salt-track-borderWidth);
+  position: absolute;
+  top: calc((var(--salt-size-adornment) - var(--salt-track-borderWidth)) / 2);
+  transition: transform 0.2s linear;
+  transform-origin: left;
 }
 
 .saltLinearProgress-progressValue {
